--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,9 @@
 @import "abstracts/variables";
+@import "abstracts/mixins";
 
 @import "base/base";
 
 @import "components/bgvideo";
+@import "components/maininput";
 
 @import "pages/home";
